--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
@@ -48,6 +48,17 @@
             </div>
           </div>
         </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">ประเภท </label>
+            <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="บริการ">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-20">พิกัด</label>
+            <input type="text" class="custom-readonly" placeholder="พิกัด" readonly="" value="อาบอบนวด">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -89,32 +100,22 @@
       </div>
       <br>
       <div style="overflow-x: scroll">
-        <table class="ui small celled table" style="width: 200%">
+        <table class="ui small celled table" style="width: 180%">
           <thead>
             <tr style="text-align: center;">
-              <th rowspan="2">ลำดับ</th>
-              <th rowspan="2">เดือน</th>
-              <th rowspan="2">รายการ</th>
-              <th rowspan="2">แบบรายการภาษี
-                <br>ภส.03 - 08</th>
-              <th rowspan="2">ใบกำกับภาษี/ใบเสร็จรับเงิน</th>
-              <th rowspan="2">บัญชีประจำวันแสดงรายการรับค่าบริการ
-                <br>ภส.07 - 05</th>
-              <th rowspan="2">ใบนำส่งเงิน</th>
-              <th rowspan="2">ใบ Order</th>
-              <th rowspan="2">รายงานภาษีขาย</th>
-              <th rowspan="2">แบบภาษีมูลค่าเพิ่ม ภส.30</th>
-              <th rowspan="2">งบเดือนกิจการสถานประกอบการ</th>
-              <th colspan="7">ผลต่าง</th>
-            </tr>
-            <tr style="text-align: center;">
-              <th style="border-left: 1px solid rgba(34,36,38,.1);">(1) - (2)</th>
-              <th>(1) - (3)</th>
-              <th>(1) - (4)</th>
-              <th>(1) - (5)</th>
-              <th>(1) - (6)</th>
-              <th>(1) - (7)</th>
-              <th>(1) - (8)</th>
+              <th>ลำดับ</th>
+              <th>เดือน</th>
+              <th>รายการ</th>
+              <th>ใบ Order</th>
+              <th>ใบกำกับภาษี/ใบเสร็จรับเงิน</th>
+              <th>ใบนำส่งเงิน</th>
+              <th>บัญชีประจำวันแสดงรายการรับค่าบริการ ภส.07 - 05</th>
+              <th>งบเดือนกิจการสถานประกอบการ ภส07-06</th>
+              <th>รายงานภาษีขาย</th>
+              <th>แบบภาษีมูลค่าเพิ่ม ภพ.30</th>
+              <th>จากการตรวจสอบ</th>
+              <th>แบบรายการภาษี ภส.03 - 08</th>
+              <th>ผลต่าง</th>
             </tr>
           </thead>
           <tbody>
@@ -122,136 +123,85 @@
               <td>1</td>
               <td>พ.ค. 2559</td>
               <td>ค่าอาหารและเครื่องดื่ม</td>
-              <td> 1,249,168.24 </td>
-              <td> 1,269,168.24 </td>
-              <td> 1,269,168.24 </td>
-              <td> 1,269,168.24 </td>
               <td>0</td>
-              <td> 1,569,168.24 </td>
+              <td>1,269,168.24</td>
+              <td>1,269,168.24</td>
+              <td>1,269,168.24</td>
               <td>1269168.24</td>
-              <td>1269168.24</td>
+              <td>1,569,168.24</td>
+              <td>1,269,168.24</td>
+              <td>1,569,168.24</td>
+              <td>1,249,168.24</td>
               <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">320,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">20,000.00</span>
+                <span class="ui red horizontal label right aligned" style="text-align: right;">320,000.00</span>
               </td>
             </tr>
             <tr>
               <td>2</td>
               <td>มิ.ย. 2559</td>
               <td>ค่าอาหารและเครื่องดื่ม</td>
-              <td> 1,140,392.32 </td>
-              <td> 1,140,392.32 </td>
-              <td> 1,140,392.32 </td>
-              <td> 1,140,392.32 </td>
               <td>0</td>
-              <td> 1,150,392.32 </td>
+              <td>1,140,392.32</td>
+              <td>1,140,392.32</td>
+              <td>1,140,392.32</td>
               <td>1140392.32</td>
-              <td>1140392.32</td>
+              <td>1,150,392.32</td>
+              <td>1,140,392.32</td>
+              <td>1,150,392.32</td>
+              <td>1,140,392.32</td>
               <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">10,000.00</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+                <span class="ui red horizontal label right aligned" style="text-align: right;">10,000.00</span>
               </td>
             </tr>
             <tr>
               <td>3</td>
               <td>ก.ค. 2559</td>
               <td>ค่าอาหารและเครื่องดื่ม</td>
-              <td> 1,943,302.11 </td>
-              <td> 2,143,302.11 </td>
-              <td> 2,143,302.11 </td>
-              <td> 2,143,302.11 </td>
               <td>0</td>
-              <td> 2,147,302.11 </td>
+              <td>2,143,302.11</td>
+              <td>2,143,302.11</td>
+              <td>2,143,302.11</td>
               <td>2143302.11</td>
-              <td>2143302.11</td>
+              <td>2,147,302.11</td>
+              <td>2,143,302.11</td>
+              <td>2,147,302.11</td>
+              <td>1,943,302.11</td>
               <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
-              </td>
-              <td>
-                <span class="ui red horizontal label right aligned" style="float: right;">200,000.00</span>
+                <span class="ui red horizontal label right aligned" style="text-align: right;">204,000.00</span>
               </td>
             </tr>
             <tr>
               <td>4</td>
               <td>ส.ค. 2559</td>
               <td>ค่าอาหารและเครื่องดื่ม</td>
-              <td> 1,234,022.54 </td>
-              <td> 1,234,022.54 </td>
-              <td> 1,234,022.54 </td>
-              <td> 1,234,022.54 </td>
               <td>0</td>
-              <td> 1,234,022.54 </td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
               <td>1234022.54</td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
+              <td>
+                <span class="ui green horizontal label right aligned" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>ธ.ค. 2559</td>
+              <td>ค่าอาหารและเครื่องดื่ม</td>
+              <td>0</td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
+              <td>1,234,022.54</td>
               <td>1234022.54</td>
+              <td>1,943,302.11</td>
+              <td>1,234,022.54</td>
+              <td>1,943,302.11</td>
+              <td>2147302.11</td>
               <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
-              </td>
-              <td>
-                <span class="ui green horizontal label right aligned" style="float: right;">-</span>
+                <span class="ui red horizontal label right aligned" style="text-align: right;">204,000.00</span>
               </td>
             </tr>
           </tbody>
