rename file and remove br tag

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -261,7 +261,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-paper-receive-material"> กระดาษทำการรับวัตถุดิบ </a>
+                                    <a href="javascript:;" routerLink="/ope04-1"> กระดาษทำการรับวัตถุดิบ </a>
                                 </td>
                             </tr>
                             <tr>
