--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -269,7 +269,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-paper-pay-material"> กระดาษทำการจ่ายวัตถุดิบ </a>
+                                    <a href="javascript:;" routerLink="/ope04-2"> กระดาษทำการจ่ายวัตถุดิบ </a>
                                 </td>
                             </tr>
                             <tr>
