--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="ui top attached header">
-      <span>อัพโหลด Template ข้อมูลสำหรับการสร้างกระดาษทำการใหม่</span>
+      <span>อัพโหลด Template ข้อมูลสำหรับการรับวัตถุดิบ</span>
     </div>
 
     <div class="ui attached segment">
