--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
@@ -201,7 +201,7 @@
               <td>1,943,302.11</td>
               <td>2147302.11</td>
               <td>
-                <span class="ui red horizontal label right aligned" style="text-align: right;">204,000.00</span>
+                <span class="ui green horizontal label right aligned" style="text-align: right;">204,000.00</span>
               </td>
             </tr>
           </tbody>
