--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-2/ope05-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-2/ope05-2.component.html
@@ -142,7 +142,7 @@
             <td>15</td>
             <td>16</td>
             <td>
-              <span class="ui red horizontal label right aligned" style="text-align: right;">1</span>
+              <span class="ui green horizontal label right aligned" style="text-align: right;">1</span>
             </td>
           </tr>
         </tbody>
