--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -296,7 +296,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-paper-receive-instant"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/ope04-4"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                             <tr>
@@ -304,7 +304,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-paper-pay-instant"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/ope04-5"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                         </tbody>
