--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-2/ope05-2.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-2/ope05-2.component.css
@@ -1,8 +1,8 @@
-tr td:nth-child(1), td:nth-child(2), td:nth-child(3),
-td:nth-child(4), td:nth-child(5), td:nth-child(6) {
+tr td:nth-child(1), td:nth-child(2) {
     text-align: center;
 }
 
-tr td:nth-child(7) {
+tr td:nth-child(3), td:nth-child(4), td:nth-child(5), 
+td:nth-child(6), td:nth-child(7) {
     text-align: right;
 }
