--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-5/ope05-5.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-5/ope05-5.component.css
@@ -1,3 +1,7 @@
-tr td:nth-child(1), td:nth-child(3), td:nth-child(4) {
+tr td:nth-child(1) {
     text-align: center;
+}
+
+tr td:nth-child(3), td:nth-child(4) {
+    text-align: right;
 }
