สร้างกระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)									สร้างกระดาษทำการตรวจสอบราคาต่อหน่วยของสินค้าที่ขอลดหย่อนภาษี				สร้างกระดาษทำการตรวจสอบด้านราคา

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="ui top attached header">
-      <span>อัพโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)</span>
+      <span>อัพโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </span>
     </div>
 
     <div class="ui attached segment">
@@ -95,7 +95,7 @@
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
           บ. ฮอนด้า มอเตอร์ ประเทศไทย
-          <br> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)
+          <br> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) 
           <br> เดือน พ.ย. 2559 - ส.ค. 2559
         </div>
       </div>
@@ -121,17 +121,17 @@
             </tr>
           </thead>
           <tbody>
-            <tr style="text-align: center;">
-              <td>ม.ค.59</td>
-              <td>3150-TF0-TO10-M1</td>
-              <td>15000</td>
-              <td>1500	</td>
-              <td>10</td>
-              <td>17-01-2559	</td>
+            <tr>
+              <td class="center aligned">ม.ค.59</td>
+              <td >3150-TF0-TO10-M1</td>
+              <td class="right aligned">15000</td>
+              <td class="right aligned">1500	</td>
+              <td class="right aligned">10</td>
+              <td class="center aligned">17-01-2559	</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
-              <td>1500</td>
-              <td>0</td>
+              <td class="right aligned">1500</td>
+              <td class="right aligned">0</td>
             </tr>
           </tbody>
         </table>
